# winpty-feedstock

./: .gitignore  README.md  conda-forge.yml
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml  meta.yaml.orig
